# posttraining

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  blah  cscs-shared-submit-scripts  inference.py  playground.ipynb  pyproject.toml
artifacts/: README.md  private  setup-symlinks.sh  shared  store
data/: README.md
installation/conda-osx-arm64-mps-todo/: README.md  environment.yml  update-env-file.sh
installation/docker-amd64-cuda/: Dockerfile  README.md  compose-base.yaml  requirements-freeze.txt  requirements.txt  template.sh  update-env-file.sh
installation/docker-arm64-cuda/: Dockerfile  README.md  apt.txt  compose-base.yaml  compose.yaml  requirements-after-buid.txt  requirements-apertus-vllm.txt  requirements-base-vllm.txt  requirements-freeze.txt  requirements-initial.txt  requirements.txt  template.sh  update-env-file.sh
reproducibility-scripts/: data-management.sh  dataset_preprocessing.sh  sync_wandb.py  template-experiment.sh  template-sweep.yaml
reproducibility-scripts/alignment-apertus-swissaiformat/: 0-README.md  README.md
reproducibility-scripts/alignment-apertus-swissaiformat-template/: 0-README.md
reproducibility-scripts/apertus-1.5-alignment/: generate_submit.py
reproducibility-scripts/apertus15-alignment/: collect_final_checkpoints.sh  rename_checkpoints.sh
reproducibility-scripts/online-qrpo-train/: generate_submit.py
reproducibility-scripts/trl-dpo/: generate_submit.py
reproducibility-scripts/trl-plw/: generate_capability_submit.py  generate_submit.py  submit.sh
src/: template.json
template/: template-variables.env
(+680 files in other folders)
